debugged more stuff in checkmate